# CXBin-Converter

./: .gitignore  Dockerfile  README.md  build.bat  build.sh  build_docker.bat  build_docker.sh  cxbin_converter.py  index.html  mesh.obj.cxbin  package.json  requirements.txt  vite.config.ts
.github/workflows/: release.yml
cxbin_converter/: batch_all_formats.py  cxbin_converter.py  cxbin_reader.py
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cli.rs  commands.rs  main.rs
src-tauri/src/cxbin/: mesh.rs  mod.rs  reader.rs
src-tauri/src/export/: amf.rs  dae.rs  dxf.rs  fbx.rs  glb.rs  gltf.rs  mesh.rs  mod.rs  msh.rs  obj.rs  off.rs  ply.rs  ply_binary.rs  stl.rs  threemf.rs  usdz.rs  vrml.rs  vtk.rs  x3d.rs  xyz.rs
src/components/: LanguageToggle.tsx  ThemeProvider.tsx  Viewer.tsx  flags.tsx
src/components/ui/: select.tsx
src/i18n/: context.tsx  index.ts  translations.ts
test/: batch_all_formats..bat  batch_all_formats.py  batch_all_formats.sh
